# vlm-htr-app

./: .env  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.gradio_cache/outputs/: Bergskollegium_-_Rättsprotokoll_från_Norr-_och_Västerbotten__1652-1738__A0067257_00007.json  Bergskollegium__Relationer_och_skrivelser__E3_5__1691-1692__40004026_00007.json  Bergskollegium__Relationer_och_skrivelser__E3_5__1691-1692__40004026_00008.json  Frihetstidens_utskott_-_Riksens_ständers_stora_deputations_handlingar__volym_2__1765-1766__R0002406_00379.json  Göta_hovrätt__Brottsmålsprotokoll__1687__40005333_00018.json  Göta_hovrätt__Fragment_-_Handlingar_rörande_vidskepelse__signerier_och_trolldom__1669-1728__A0060209_00024.json  Göteborgs_poliskammare_före_1900__A_II__1a__1868__30002021_00007.json  Göteborgs_poliskammare_före_1900__A_II__1a__1868__30002021_00010.json  Jönköpings_rådhusrätts_och_magistrats_arkiv__Domböcker__1__1584-1595__V0000267_00036.json  Regementsvis_ordnade_handlingar__1688-1693__A0065848_00010.json
app/: configs.py  htr_vlm.py  main.py
examples/: Bergskollegium__Relationer_och_skrivelser__E3_5__1691-1692__40004026_00008.tif  Göteborgs_poliskammare_före_1900__A_II__1a__1868__30002021_00010.tif  Göteborgs_poliskammare_före_1900__A_II__4__1872__30002025_00006.tif
src/: data_types.py  file_tools.py  logger.py  train.py  visualization.py
src/app/: main.py
src/backend/: main.py
src/data_processing/: base_datasets.py  florence.py  trocr.py  utils.py  visual_tasks.py  yolo.py
src/htr/: utils.py
(+33 files in other folders)
