[project]
name = "vlm-htr-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hoanghapham", email = "hoangha.20021992@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "fastapi[standard]>=0.116.1",
    "gradio>=5.39.0",
    "ipykernel>=6.30.0",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "spaces>=0.39.0",
    "timm>=1.0.19",
    "transformers==4.49.0",
    "vlm",
]

[project.scripts]
app = "gradio_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vlm = { git = "ssh://git@github.com/hoanghapham/vlm-htr" }

[tool.hatch.build.targets.wheel]
packages = ["src/gradio_ui"]
